[gd_scene load_steps=4 format=3 uid="uid://cwjv8jaayivo0"]

[ext_resource type="Script" path="res://code/ui/menu/settings.gd" id="1_5w8lb"]
[ext_resource type="Theme" uid="uid://clefja284aktg" path="res://code/ui/menu/default_theme.tres" id="1_ydpgl"]

[sub_resource type="LabelSettings" id="LabelSettings_iw8wd"]
font_size = 24

[node name="Settings" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -110.0
offset_top = -149.0
offset_right = 123.0
offset_bottom = 134.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ydpgl")
script = ExtResource("1_5w8lb")

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="Margin"]
layout_mode = 2

[node name="Title" type="Label" parent="Margin/VBox"]
layout_mode = 2
size_flags_vertical = 0
text = "Settings"
label_settings = SubResource("LabelSettings_iw8wd")
horizontal_alignment = 1

[node name="Brightness" type="VBoxContainer" parent="Margin/VBox"]
layout_mode = 2

[node name="Name" type="Label" parent="Margin/VBox/Brightness"]
layout_mode = 2
text = "Brightness"
horizontal_alignment = 1

[node name="HSlider" type="HSlider" parent="Margin/VBox/Brightness"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = 0.5
max_value = 1.0
step = 0.01
value = 1.0

[node name="Sound" type="VBoxContainer" parent="Margin/VBox"]
layout_mode = 2

[node name="Name" type="Label" parent="Margin/VBox/Sound"]
layout_mode = 2
text = "Sound"
horizontal_alignment = 1

[node name="HSlider" type="HSlider" parent="Margin/VBox/Sound"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = -20.0
max_value = 0.0

[node name="Close" type="Button" parent="Margin"]
custom_minimum_size = Vector2(64, 32)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
text = "Close"

[connection signal="drag_ended" from="Margin/VBox/Brightness/HSlider" to="." method="_on_h_slider_drag_ended"]
[connection signal="value_changed" from="Margin/VBox/Brightness/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="value_changed" from="Margin/VBox/Sound/HSlider" to="." method="_on_sound_h_slider_value_changed"]
[connection signal="pressed" from="Margin/Close" to="." method="_on_close_pressed"]
